--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,128 @@
-h1{
+html{
+    width: 100%;
+    height: 250%;
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+body, #root{
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.label{
     display: flex;
-    justify-content: center;
+    flex-flow: row;
+    align-items: center;
+}
+
+input[type=text]{
+    border: 2px solid black;
+}
+
+h1{
+    text-align: center;
+}
+
+button{
+    cursor: pointer;
+    width: 100px;
+}
+
+.hidden{
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.shown{
+    display: 1;
+    transition: 0.3s;
+}
+
+.form-wrapper{
+    width: 50%;
+    height: 5%;
+    margin-left: 1%;
+}
+
+#form{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-top: 2%;
+    height: 50%;
+    align-items: center;
+}
+
+#canvasWrapper{
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row;
+    max-width: 50%;
+    margin-left: 1%;
+    margin-top: 5%;
+    border: 1px outset grey;
+    align-items:flex-end;
+}
+
+.canvas{
+    float: bottom;
+    transition: 0.5s;
+    width: 1%;
+    height: 100%;
+    border: 2px solid black;
+    margin-top: '100px';
+}
+
+/* /////////////////////////////////////////////////////////////////////// */
+/* cube */
+.container{
+    width: 300px;
+    height: 300px;
+    perspective: 500px;
+}
+
+.cube{
+    width: inherit;
+    height: inherit;
+    transform-style: preserve-3d;
+}
+
+.side{
+    width: inherit;
+    height: inherit;
+    border: 5px solid black; 
+    font: normal 70px Arial;
+    position: absolute;
+    text-align: center;
+    line-height: 300px;
+}
+
+.front{
+    transform: translateZ(150px);
+}
+
+.top{
+    transform: rotateX(90deg) translateZ(150px);
+}
+
+.bottom{
+    transform: rotateX(-90deg) translateZ(150px);
+}
+
+.right{
+    transform: rotateY(90deg) translateZ(150px);
+}
+
+.left{
+    transform: rotateY(-90deg) translateZ(150px);
+}
+
+.back{
+    transform: rotateY(180deg) translateZ(150px);
 }
